force-app/main/default/objects/Lead/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <inlineHelpText>Serves as an initial definition of an Account Type. This field will be converted into Account Type</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>End client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>