force-app/main/default/objects/Lead/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>