force-app/main/default/objects/Lead/fields/Language_Mailchimp__c.field-meta.xml
<CustomField>
    <fullName>Language_Mailchimp__c</fullName>
    <label>Language - Mailchimp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_Mailchimp</valueSetName>
    </valueSet>
</CustomField>