force-app/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Limit to 255 characters</description>
    <label>Lead Source Detail</label>
    <type>TextArea</type>
</CustomField>