force-app/main/default/objects/Lead/fields/Mailchimp_Opted_In__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Opted_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailchimp - Opted In</label>
    <type>Checkbox</type>
</CustomField>