force-app/main/default/objects/Lead/fields/Marketing_info__c.field-meta.xml
<CustomField>
    <fullName>Marketing_info__c</fullName>
    <description>Limit to 255 characters</description>
    <label>Marketing info</label>
    <type>TextArea</type>
</CustomField>