force-app/main/default/objects/Lead/fields/OriginalEmails__c.field-meta.xml
<CustomField>
    <fullName>OriginalEmails__c</fullName>
    <description>Emails from header (from Web-to-Lead service)</description>
    <inlineHelpText>Emails from header (from Web-to-Lead service)</inlineHelpText>
    <label>Original Emails</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>