force-app/main/default/objects/Lead/listViews/All_Open_Leads_after_Orgatec.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads_after_Orgatec</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_date_custom__c</field>
        <operation>greaterThan</operation>
        <value>10/24/2022</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>Admin</value>
    </filters>
    <label>All Open Leads After Orgatec</label>
</ListView>