force-app/main/default/objects/Lead/listViews/All_Open_Leads_country_filters.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads_country_filters</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Leads - country - filters</label>
</ListView>