force-app/main/default/objects/Lead/listViews/All_Open_SU_Leads.listView-meta.xml
<ListView>
    <fullName>All_Open_SU_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Message__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,Nurturing,Qualified</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>SU</value>
    </filters>
    <label>All Open SU Leads</label>
    <sharedTo>
        <group>SilentLabManagement</group>
    </sharedTo>
</ListView>