force-app/main/default/objects/Lead/listViews/Copy_of_All_Open_Leads_New.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Open_Leads_New</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Detail__c</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Website,SL Contact form,SL Price list form,MO Contact form,MO Showroom form</value>
    </filters>
    <label>All Open Leads - New web</label>
</ListView>