force-app/main/default/objects/Lead/listViews/Import_Event_test_FF.listView-meta.xml
<ListView>
    <fullName>Import_Event_test_FF</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Lead_Source_Detail__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Language_Mailchimp__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_date_custom__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Language_Mailchimp__c</field>
        <operation>equals</operation>
        <value>DE</value>
    </filters>
    <label>Import Event - test- FF</label>
</ListView>