force-app/main/default/objects/Lead/listViews/LeadQueue_Lead.listView-meta.xml
<ListView>
    <fullName>LeadQueue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Queue</label>
    <queue>LeadQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>