force-app/main/default/objects/Lead/listViews/Neocon_All_Open_Leads.listView-meta.xml
<ListView>
    <fullName>Neocon_All_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Detail__c</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Detail__c</field>
        <operation>equals</operation>
        <value>2023 Chicago NeoCon</value>
    </filters>
    <label>Neocon All Open Leads</label>
</ListView>